# todo

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: lint-test.yml
app/: Cargo.toml
cli/: Cargo.toml
cli/src/: display.rs
crates/app/: Cargo.toml
crates/app/src/: config.rs  issue.rs  lib.rs  project.rs
crates/app/src/project/: metadata.rs
crates/cli/: Cargo.toml
crates/cli/src/: command.rs  display.rs  main.rs  opts.rs
crates/cli/src/opts/: config_override.rs
crates/cli/tests/: list.md  list.rs  list_complex.md  list_display.md  list_issue_set.md  tree.md  tree.rs  tree_complex.md  tree_issue_set.md
crates/lib/src/: issue.rs  plan.rs
crates/tests/: Cargo.toml
crates/tracker-fs/: Cargo.toml
crates/tracker-fs/src/: file.rs  issue.rs  plan.rs  tracker.rs
crates/tracker-fs/src/plan/: parse.rs
crates/tracker-fs/tests/: load_project_plan.rs
