[package]
name = "todo-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
config-load = { workspace = true }
home = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_regex = { workspace = true }
thiserror = { workspace = true }
todo-lib = { workspace = true }
todo-tracker-fs = { workspace = true }
