[package]
name = "todo-cli"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
either = { workspace = true }
indexmap = { workspace = true }
todo-app = { workspace = true }
todo-lib = { workspace = true }
todo-tracker-fs = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
md-cli-test = { workspace = true }
pulldown-cmark = { workspace = true }
regex = { workspace = true }
temp_testdir = { workspace = true }
