[package]
name = "todo-tracker-fs"
version = "0.1.0"
edition = "2024"

[dependencies]
either = { workspace = true }
fs-err = { workspace = true }
indexmap = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
todo-lib = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
function_name = { workspace = true }
temp_testdir = { workspace = true }
tests = { workspace = true }
